# RPoem

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  PORTING.md  README-Arabic.md  README-Chinese.md  README-English.md  README-France.md  README-Germany.md  README-Italy.md  README-Japan.md  README-Korea.md  README-Russia.md  README-Spain.md  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  install.ps1  install.sh  rustfmt.toml
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/tokyo/runo/rpoem/: MainActivity.kt  PowerProfile.kt  ProfileSelectActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/layout-sw600dp/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: client.ts  types.ts
apps/desktop/src/pages/: ai-routing.ts  dashboard.ts  federation.ts  schemas.ts
crates/open-runo-ai-routing/: Cargo.toml
crates/open-runo-ai-routing/examples/: pick_provider.rs
crates/open-runo-ai-routing/src/: lib.rs
crates/open-runo-api-types/src/: lib.rs
crates/open-runo-appserver/src/: lib.rs
crates/open-runo-backup/: Cargo.toml
crates/open-runo-backup/src/: lib.rs
crates/open-runo-cache/: Cargo.toml
crates/open-runo-cache/src/: lib.rs  predictor.rs
crates/open-runo-core/: Cargo.toml
crates/open-runo-core/src/: lib.rs
crates/open-runo-db/: Cargo.toml
crates/open-runo-db/src/: dual.rs  federated.rs  lib.rs  migrate.rs  migration.rs
crates/open-runo-federation/: Cargo.toml
crates/open-runo-federation/examples/: compose_two_services.rs
crates/open-runo-federation/src/: lib.rs
crates/open-runo-gateway/: Cargo.toml
crates/open-runo-gateway/src/: appserver_tenants.rs  lib.rs  main.rs
crates/open-runo-history/: Cargo.toml
crates/open-runo-history/src/: lib.rs
crates/open-runo-observability/: Cargo.toml
crates/open-runo-observability/src/: lib.rs
crates/open-runo-persisted-queries/: Cargo.toml
crates/open-runo-persisted-queries/src/: lib.rs
crates/open-runo-poem-compat/: Cargo.toml
crates/open-runo-poem-compat-macro/: Cargo.toml
crates/open-runo-poem-compat-macro/src/: lib.rs
crates/open-runo-poem-compat/src/: lib.rs
crates/open-runo-poem-compat/tests/: handler_macro.rs
crates/open-runo-router/: Cargo.toml
crates/open-runo-router/src/: audit.rs  auth.rs  grpc.rs  handlers_hyper.rs  hyper_compat.rs  keyring.rs  lib.rs  main.rs  maintenance.rs  mcp.rs  rate_limit.rs  state.rs  udp_notice.rs  validation.rs
crates/open-runo-router/src/handlers/: ai_routing.rs  cache.rs  db.rs  events.rs  federation.rs  maintenance.rs  mod.rs  persisted_queries.rs  schemas.rs  scim.rs
crates/open-runo-router/src/middleware/: cors.rs  html_cache.rs  mod.rs
crates/open-runo-router/tests/: ledger_fusion.rs
crates/open-runo-rustjson/src/: lib.rs
crates/open-runo-schema-registry/: Cargo.toml
crates/open-runo-schema-registry/examples/: register_and_promote.rs
crates/open-runo-schema-registry/src/: lib.rs
crates/open-runo-scim/: Cargo.toml
crates/open-runo-scim/src/: lib.rs
crates/open-runo-security/: Cargo.toml
crates/open-runo-security/src/: lib.rs  oidc.rs  rbac.rs
crates/open-runo-security/testdata/: test_jwks.json  test_rsa.pem
crates/open-runo-versionless-api/: Cargo.toml
crates/open-runo-versionless-api/src/: lib.rs
docs/: HANDOFF.md  HYBRID_NETWORK_ARCHITECTURE.md  ai-routing.md  api-examples.md  api-spec.md  architecture.md  backup.md  cosmo-parity.md  database.md  federation.md  migration.md  poem-parity.md  quality-gates.md  rustjson.md  security.md  versionless-api.md  why-openruno.md
scripts/: sync-cosmo-core.sh
