[package]
name = "open-runo-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "open-runo Git-like History Engine: commit-style change records, diff, rollback, and audit log for schema/DB/config changes"

[lints]
workspace = true

[dependencies]
open-runo-core = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
