[package]
name = "open-runo-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["open-runo Contributors"]
license = "Apache-2.0 OR MIT"
description = "open-runo Desktop — Tauri 2.x management & end-user application"

[lib]
name = "open_runo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-runo-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
tauri-plugin-shell   = "2"
tauri-plugin-opener  = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror   = "1"

[profile.release]
opt-level  = 3
lto        = true
codegen-units = 1
strip      = true
